# ase2026

./: .env.example  .gitignore  Dockerfile  Jenkinsfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/codebites/: Dockerfile  LICENSE  README.md  index.html  package.json  vite.config.js
apps/pratica-dai/: LICENSE  README.md  package.json  server.js
apps/rocooky/: LICENSE  README.md  package.json  server.js
apps/taboo/: LICENSE  README.md  package.json  server.js
baselines/: __init__.py  sa_react.py  sp_llm.py  sp_llm_cot.py
baselines/record_replay/: README.md  codebites_form_crud.py
doc2test/: __init__.py  agent_base.py  cli.py
doc2test/coordinator/: __init__.py  coordinator.py  retry.py  state_machine.py
doc2test/llm_layer/: __init__.py  base.py  cache.py  gemini_provider.py  layer.py  openai_provider.py  prompt_assembler.py  schema_validator.py
doc2test/phase1/: __init__.py  action_concretizer.py  atomicity_enforcer.py  context_enricher.py  extractor.py  logic_simplifier.py  reorderer.py  structuring.py  syntax_adapter.py
doc2test/phase2/: __init__.py  dom_filter_agent.py  dom_reader.py  dynamic_detector.py  screenshot_acquirer.py
docs/: ARCHITECTURE.md  COSTS.md  LIMITATIONS.md  PROMPTS.md  REPLICATION.md
evaluation/: plot_tables.py  rq1_runner.py  rq2_mutation.py  rq3_compare.py  stats.py
mutation_tool/: __init__.py  equivalence_check.py  mutate_ast.py  mutate_proxy.py  operators.py
scripts/: check_redaction.py  fetch_realworld.sh  generate_traces.py
traces/: cost_breakdown.csv
uats/: README.md
(+173 files in other folders)
